# rust-workspace

./: .gitignore  Achievements.md  Cargo.toml  GEMINI.md  README.md
.github/workflows/: ci.yml
src/days/day1/: README.md  greetings.rs  temp_tracker.rs
src/days/day10/: README.md  for_array.rs  for_range.rs
src/days/day3/: README.md
src/days/day4/: README.md  division.rs  strict_math.rs
src/days/day5/: README.md  booleans.rs  chars.rs
src/days/day6/: README.md  destructuring.rs  tuple_basics.rs
src/days/day7/: README.md  array_basics.rs  debug_print.rs
src/days/day8/: README.md  infinite_loop.rs  loop_return.rs
src/days/day9/: README.md  while_array.rs  while_countdown.rs
