[[bin]]
name = "temp_tracker"
path = "src/bin/day1/temp_tracker.rs"

[[bin]]
name = "greetings"
path = "src/bin/day1/greetings.rs"

[[bin]]
name = "constants"
path = "src/bin/day2/constants.rs"

[[bin]]
name = "scope"
path = "src/bin/day2/scope.rs"

[[bin]]
name = "shadowing"
path = "src/bin/day3/shadowing.rs"

[[bin]]
name = "shadowing_values"
path = "src/bin/day3/shadowing_values.rs"


[package]
name = "rust-workspace"
version = "0.1.0"
edition = "2024"

[dependencies]
