[[bin]]
name = "temp_tracker"
path = "src/days/day1/temp_tracker.rs"

[[bin]]
name = "greetings"
path = "src/days/day1/greetings.rs"

[[bin]]
name = "constants"
path = "src/days/day2/constants.rs"

[[bin]]
name = "scope"
path = "src/days/day2/scope.rs"

[[bin]]
name = "shadowing"
path = "src/days/day3/shadowing.rs"

[[bin]]
name = "shadowing_values"
path = "src/days/day3/shadowing_values.rs"

[[bin]]
name = "strict_math"
path = "src/days/day4/strict_math.rs"

[[bin]]
name = "division"
path = "src/days/day4/division.rs"

[package]
name = "rust-workspace"
version = "0.1.0"
edition = "2024"

[dependencies]
