[[bin]]
name = "temp_tracker"
path = "src/days/day1/temp_tracker.rs"

[[bin]]
name = "greetings"
path = "src/days/day1/greetings.rs"

[[bin]]
name = "constants"
path = "src/days/day2/constants.rs"

[[bin]]
name = "scope"
path = "src/days/day2/scope.rs"

[[bin]]
name = "shadowing"
path = "src/days/day3/shadowing.rs"

[[bin]]
name = "shadowing_values"
path = "src/days/day3/shadowing_values.rs"

[[bin]]
name = "strict_math"
path = "src/days/day4/strict_math.rs"

[[bin]]
name = "division"
path = "src/days/day4/division.rs"

[[bin]]
name = "booleans"
path = "src/days/day5/booleans.rs"

[[bin]]
name = "chars"
path = "src/days/day5/chars.rs"

[[bin]]
name = "tuple_basics"
path = "src/days/day6/tuple_basics.rs"

[[bin]]
name = "destructuring"
path = "src/days/day6/destructuring.rs"

[[bin]]
name = "array_basics"
path = "src/days/day7/array_basics.rs"

[[bin]]
name = "debug_print"
path = "src/days/day7/debug_print.rs"

[[bin]]
name = "infinite_loop"
path = "src/days/day8/infinite_loop.rs"

[[bin]]
name = "loop_return"
path = "src/days/day8/loop_return.rs"


[package]
name = "rust-workspace"
version = "0.1.0"
edition = "2024"

[dependencies]
